--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_core: ^4.2.1
   cloud_firestore: ^6.1.0
   progress_bar_countdown: ^0.0.3
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
